// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block correctly adds 'alternate' classes 1`] = `
<section
  className="undefined myClass"
/>
`;

exports[`Block renders correctly 1`] = `
<section
  className="myClass"
/>
`;
